[project]
name = "netrun"
version = "0.1.0"
description = "A flow-based development (FBD) runtime system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netrun-sim>=0.1.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "nblite>=1.0.4",
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]
