[package]
name = "netrun-sim"
description = "A flow-based development (FBD) simulation engine."
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
repository = "https://github.com/lukastk/netrun/"

[dependencies]
indexmap = "2.12.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
ulid = "=1.1.0"
utcnow = "0.2.7"

[dev-dependencies]
serde_json = "1.0"
