[project]
name = "dev"
version = "0.1.0"
description = "Development utilities for netrun"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["utils"]
packages = ["dev"]

[tool.setuptools.package-dir]
dev = "."
